[package]
name = "fofoprono-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0"
diesel = { version = "2", features = ["postgres", "r2d2"] }
dotenvy = "0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
# actix-session = { version = "0", features = ["cookie-session"] }
# actix-identity = "0"
actix-session = { path = "D:/Dev/rust/actix-extras/actix-session", features = ["cookie-session"] }
actix-identity = { path = "D:/Dev/rust/actix-extras/actix-identity" }
lettre = "0.10"
rand = "0"
nanoid = "0"