[package]
name = "fofoprono-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0"
actix-files = "0"
actix-session = { version = "0", features = ["cookie-session"] }
actix-web-httpauth = "0"
diesel = { version = "2", features = ["postgres", "r2d2"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
dotenvy = "0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
lettre = { version = "0.10", features = [] }
rand = "0"
nanoid = "0"
time = "0"
argon2 = "0.4.1"