[package]
name = "fofoprono-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
actix-session = { version = "0.9", features = ["cookie-session"] }
diesel = { version = "2.1", features = ["postgres", "r2d2"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
dotenvy = "0.15"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
lettre = { version = "0.11", features = ["rustls-tls"] }
rand = "0.8"
nanoid = "0.4"
argon2 = "0.5"
